add new website from server na

--- a/xem-phim-bo/gia-thien/index.html
+++ b/xem-phim-bo/gia-thien/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1546,7 +1546,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1568,7 +1568,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1590,29 +1590,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1634,7 +1612,29 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1655,18 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhat-dai-thien-kieu" title="Nhất Đại Thiên Kiều">
+          <a class="list-top-movie-link" href="/phim-moi/tan-manh-long-qua-giang-nhiep-long" title="Tân Mãnh Long Quá Giang Nhiếp Long">
            <span class="status">
-            HD Lồng Tiếng
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-dai-thien-kieu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-manh-long-qua-giang-nhiep-long-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhất Đại Thiên Kiều
+             Tân Mãnh Long Quá Giang Nhiếp Long
             </span>
             <span class="list-top-movie-item-en">
-             Legend Of a Beauty
+             New Way Of The Dragon
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1677,18 +1677,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vung-dat-quy-du-khai-huyen" title="Vùng Đất Quỷ Dữ: Khải Huyền">
+          <a class="list-top-movie-link" href="/phim-moi/buoc-vao-ky-uc-cua-anh" title="Bước Vào Ký Ức Của Anh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-dat-quy-du-khai-huyen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoc-vao-ky-uc-cua-anh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vùng Đất Quỷ Dữ: Khải Huyền
+             Bước Vào Ký Ức Của Anh
             </span>
             <span class="list-top-movie-item-en">
-             Resident Evil: Apocalypse
+             Walk Into Your Memory
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1699,21 +1699,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-sat-xao-quyet" title="Cảnh Sát Xảo Quyệt">
+          <a class="list-top-movie-link" href="/phim-moi/thoi-qua-khu" title="Thời Quá Khứ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-xao-quyet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoi-qua-khu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cảnh Sát Xảo Quyệt
+             Thời Quá Khứ
             </span>
             <span class="list-top-movie-item-en">
-             Filth
+             All About Eve
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1721,43 +1721,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bap-benh-phan-5" title="Bấp Bênh (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/lang-dongmakgol" title="Làng Dongmakgol">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bap-benh-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-dongmakgol-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bấp Bênh (Phần 5)
+             Làng Dongmakgol
             </span>
             <span class="list-top-movie-item-en">
-             Insecure (Season 5)
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/archer-phan-13" title="Archer (Phần 13)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/archer-phan-13-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Archer (Phần 13)
-            </span>
-            <span class="list-top-movie-item-en">
-             Archer (Season 13)
+             Welcome to Dongmakgol
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sat-thu-chung-giuong" title="Sát Thủ Chung Giường">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-thu-chung-giuong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sát Thủ Chung Giường
+            </span>
+            <span class="list-top-movie-item-en">
+             I Killed My Husband
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
