add new website from server na

--- a/xem-phim-bo/gia-thien/index.html
+++ b/xem-phim-bo/gia-thien/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1655,62 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tan-manh-long-qua-giang-nhiep-long" title="Tân Mãnh Long Quá Giang Nhiếp Long">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-manh-long-qua-giang-nhiep-long-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tân Mãnh Long Quá Giang Nhiếp Long
-            </span>
-            <span class="list-top-movie-item-en">
-             New Way Of The Dragon
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/buoc-vao-ky-uc-cua-anh" title="Bước Vào Ký Ức Của Anh">
+          <a class="list-top-movie-link" href="/phim-moi/mat-vu-snowden" title="Mật vụ Snowden">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoc-vao-ky-uc-cua-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-vu-snowden-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bước Vào Ký Ức Của Anh
+             Mật vụ Snowden
             </span>
             <span class="list-top-movie-item-en">
-             Walk Into Your Memory
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thoi-qua-khu" title="Thời Quá Khứ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoi-qua-khu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thời Quá Khứ
-            </span>
-            <span class="list-top-movie-item-en">
-             All About Eve
+             Snowden
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1721,18 +1677,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lang-dongmakgol" title="Làng Dongmakgol">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-lung-danh-conan-vien-dan-do" title="Thám Tử Lừng Danh Conan: Viên Đạn Đỏ">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-dongmakgol-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-lung-danh-conan-vien-dan-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Làng Dongmakgol
+             Thám Tử Lừng Danh Conan: Viên Đạn Đỏ
             </span>
             <span class="list-top-movie-item-en">
-             Welcome to Dongmakgol
+             Detective Conan: The Scarlet Bullet
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1743,21 +1699,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sat-thu-chung-giuong" title="Sát Thủ Chung Giường">
+          <a class="list-top-movie-link" href="/phim-moi/khach-san-chevalier" title="Khách Sạn Chevalier">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-thu-chung-giuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-san-chevalier-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sát Thủ Chung Giường
+             Khách Sạn Chevalier
             </span>
             <span class="list-top-movie-item-en">
-             I Killed My Husband
+             Hotel Chevalier
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dragon-quest-your-story" title="Dragon Quest: Your Story">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dragon-quest-your-story-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dragon Quest: Your Story
+            </span>
+            <span class="list-top-movie-item-en">
+             Dragon Quest: Your Story
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/huyen-thoai-sumo" title="Huyền thoại Sumo">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huyen-thoai-sumo-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Huyền thoại Sumo
+            </span>
+            <span class="list-top-movie-item-en">
+             火ノ丸相扑
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
